fixes for ui
