# internal/models/user.go
@@ -5,11 +5,11 @@ import (
 )
 
 type User struct {
-	UserId           int    `gorm:"primaryKey"`
+	UserId           int    `gorm:"primaryKey" json:"userId"`
 	Login            string `json:"login" binding:"required,max=64"`
-	IsAdmin          bool
-	Name             string `json:"name"`
-	Password         string `json:"password" binding:"required,min=8,max=64"`
+	IsAdmin          bool   `json:"isAdmin"`
+	Name             string `json:"name,omitempty"`
+	Password         string `json:"password,omitempty" binding:"required,min=8,max=64"`
 	RegistrationDate time.Time
 }
 
@@ -20,6 +20,5 @@ type UserLogin struct {
 
 type UserSignUp struct {
 	Login    string `json:"login" binding:"required,max=64"`
-	Name     string `json:"name"`
 	Password string `json:"password" binding:"required,min=8,max=64"`
 }
